--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
-    "gsap": "^2.0.2",
-    "animejs": "^3.0.1"
+    "gsap": "^2.0.2"
   }
 }
